--- a/src/main/resources/ucf/assignment/ModifyItemlist.fxml
+++ b/src/main/resources/ucf/assignment/ModifyItemlist.fxml
@@ -18,6 +18,6 @@
       <DatePicker fx:id="Modified_Due_Date" layoutX="141.0" layoutY="111.0" AnchorPane.bottomAnchor="85.0" AnchorPane.leftAnchor="141.0" AnchorPane.rightAnchor="37.0" />
       <Button layoutX="156.0" layoutY="162.0" mnemonicParsing="false" onAction="#Save_Modified_Item" text="Save" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="156.0" AnchorPane.rightAnchor="155.0" />
       <Button layoutX="245.0" layoutY="162.0" mnemonicParsing="false" onAction="#Close_ModifiedItem_Window" text="Close" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="245.0" AnchorPane.rightAnchor="62.0" />
-      <TextField fx:id="Modified_Description_Inputted" layoutX="141.0" layoutY="74.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.bottomAnchor="122.0" AnchorPane.leftAnchor="141.0" AnchorPane.rightAnchor="37.0" />
+      <TextField fx:id="Modified_Description_Inputted" layoutX="141.0" layoutY="74.0" prefHeight="25.0" prefWidth="174.0" promptText="Add Description here ..." AnchorPane.bottomAnchor="122.0" AnchorPane.leftAnchor="141.0" AnchorPane.rightAnchor="37.0" />
    </children>
 </AnchorPane>
