--- a/src/main/resources/ucf/assignment/NewTodolist.fxml
+++ b/src/main/resources/ucf/assignment/NewTodolist.fxml
@@ -1,77 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignment.NewTodolistController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="176.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignment.NewTodolistController">
    <children>
-      <SplitPane dividerPositions="0.5376884422110553" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="228.0" prefWidth="598.0">
-               <children>
-                  <Label layoutX="20.0" layoutY="56.0" text="Name:" AnchorPane.bottomAnchor="131.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="522.0">
-                     <font>
-                        <Font name="Times New Roman" size="21.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="220.0" layoutY="7.0" text="New To-Do List" AnchorPane.bottomAnchor="176.0" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="219.0">
-                     <font>
-                        <Font name="Times New Roman" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="488.0" layoutY="182.0" text="Items" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="488.0" AnchorPane.rightAnchor="63.0">
-                     <font>
-                        <Font name="Times New Roman" size="21.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="NameListInput" layoutX="90.0" layoutY="56.0" prefHeight="25.0" prefWidth="242.0" AnchorPane.bottomAnchor="130.0" AnchorPane.leftAnchor="90.0" AnchorPane.rightAnchor="266.0" />
-                  <Button fx:id="BtnCreateList" layoutX="256.0" layoutY="106.0" mnemonicParsing="false" onAction="#Create_List" prefHeight="28.0" prefWidth="86.0" text="Create" AnchorPane.bottomAnchor="77.0" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="256.0" />
-                  <Button layoutX="551.0" layoutY="2.0" mnemonicParsing="false" onAction="#Close_New_todo_list" prefHeight="7.0" prefWidth="47.0" text="Close" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <SplitPane dividerPositions="0.6471571906354515" layoutX="2.0" prefHeight="181.0" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                           <children>
-                              <Label layoutX="14.0" layoutY="14.0" text="Name Item:" AnchorPane.bottomAnchor="141.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="269.0">
-                                 <font>
-                                    <Font name="Times New Roman" size="21.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="12.0" layoutY="53.0" text="Description:" AnchorPane.bottomAnchor="102.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="267.0">
-                                 <font>
-                                    <Font name="Times New Roman" size="21.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="14.0" layoutY="99.0" text="Due Date:" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="283.0">
-                                 <font>
-                                    <Font name="Times New Roman" size="21.0" />
-                                 </font>
-                              </Label>
-                              <TextField fx:id="Name_Item" layoutX="131.0" layoutY="14.0" prefHeight="25.0" prefWidth="242.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="131.0" AnchorPane.rightAnchor="10.0" />
-                              <TextField fx:id="Description_Item" layoutX="131.0" layoutY="53.0" prefHeight="25.0" prefWidth="242.0" AnchorPane.bottomAnchor="101.0" AnchorPane.leftAnchor="131.0" AnchorPane.rightAnchor="10.0" />
-                              <DatePicker fx:id="Due_Date" layoutX="131.0" layoutY="99.0" prefHeight="25.0" prefWidth="242.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="131.0" AnchorPane.rightAnchor="10.0" />
-                              <Button layoutX="166.0" layoutY="138.0" mnemonicParsing="false" onAction="#Add_item_new_todo_list" prefHeight="28.0" prefWidth="77.0" text="Add" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="166.0" AnchorPane.rightAnchor="140.0" />
-                           </children>
-                        </AnchorPane>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="263.0" prefWidth="275.0">
-                           <children>
-                              <ListView layoutX="-6.0" layoutY="-5.0" prefHeight="177.0" prefWidth="208.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                           </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="228.0" prefWidth="598.0">
+         <children>
+            <Label layoutX="20.0" layoutY="56.0" text="Name:" AnchorPane.bottomAnchor="131.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="522.0">
+               <font>
+                  <Font name="Times New Roman" size="21.0" />
+               </font>
+            </Label>
+            <Label layoutX="220.0" layoutY="7.0" text="New To-Do List" AnchorPane.bottomAnchor="176.0" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="219.0">
+               <font>
+                  <Font name="Times New Roman" size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="NameListInput" layoutX="90.0" layoutY="56.0" prefHeight="25.0" prefWidth="242.0" promptText="Add Name here ..." AnchorPane.bottomAnchor="130.0" AnchorPane.leftAnchor="90.0" AnchorPane.rightAnchor="266.0" />
+            <Button fx:id="BtnCreateList" layoutX="256.0" layoutY="106.0" mnemonicParsing="false" onAction="#Create_List" prefHeight="28.0" prefWidth="86.0" text="Create" AnchorPane.bottomAnchor="77.0" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="256.0" />
+            <Button layoutX="551.0" layoutY="2.0" mnemonicParsing="false" onAction="#Close_New_todo_list" prefHeight="7.0" prefWidth="47.0" text="Close" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
