--- a/src/main/resources/ucf/assignment/NewTodolistItem.fxml
+++ b/src/main/resources/ucf/assignment/NewTodolistItem.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="New_due_date" prefHeight="229.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignment.NewTodoListItemController">
+<AnchorPane prefHeight="229.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignment.NewTodoListItemController">
    <children>
       <Button layoutX="165.0" layoutY="157.0" mnemonicParsing="false" onAction="#AddNewItem" prefHeight="41.0" prefWidth="67.0" text="Add" />
-      <DatePicker layoutX="204.0" layoutY="105.0" />
+      <DatePicker fx:id="New_due_date" layoutX="204.0" layoutY="105.0" />
       <Label layoutX="14.0" layoutY="23.0" text="Name of the new item:">
          <font>
             <Font name="Times New Roman" size="20.0" />
