--- a/src/main/resources/ucf/assignment/Todolist.fxml
+++ b/src/main/resources/ucf/assignment/Todolist.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -31,7 +33,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <SplitPane dividerPositions="0.5" layoutX="47.0" layoutY="40.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0">
+      <SplitPane dividerPositions="0.5083487940630798" layoutX="47.0" layoutY="40.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
@@ -40,17 +42,17 @@
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
                               <ListView fx:id="ViewList" layoutX="6.0" layoutY="26.0" onMouseClicked="#Show_Items_Of_List" prefHeight="237.0" prefWidth="361.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="27.0" />
-                              <Label layoutX="147.0" layoutY="-2.0" prefHeight="29.0" prefWidth="67.0" text="Lists" AnchorPane.leftAnchor="147.0" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="-1.0">
+                              <Label layoutX="147.0" layoutY="-2.0" prefHeight="29.0" prefWidth="145.0" text="To-do Lists" AnchorPane.leftAnchor="147.0" AnchorPane.rightAnchor="74.0" AnchorPane.topAnchor="-1.0">
                                  <font>
                                     <Font name="Times New Roman" size="26.0" />
                                  </font>
                               </Label>
                            </children>
                         </AnchorPane>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="264.0" prefWidth="401.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="289.0" prefWidth="366.0">
                            <children>
-                              <ListView fx:id="ViewItems" layoutX="31.0" layoutY="26.0" onMouseClicked="#Show_Item_Information" prefHeight="231.0" prefWidth="361.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="26.0" />
-                              <Label layoutX="156.0" prefHeight="29.0" prefWidth="81.0" text="Items" AnchorPane.leftAnchor="156.0" AnchorPane.rightAnchor="129.0" AnchorPane.topAnchor="1.0">
+                              <ListView fx:id="ViewItems" layoutX="31.0" layoutY="26.0" onMouseClicked="#Show_Item_Information" prefHeight="256.0" prefWidth="366.0" AnchorPane.bottomAnchor="-7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="26.0" />
+                              <Label layoutX="156.0" prefHeight="29.0" prefWidth="81.0" text="Tasks" AnchorPane.leftAnchor="156.0" AnchorPane.rightAnchor="129.0" AnchorPane.topAnchor="1.0">
                                  <font>
                                     <Font name="Times New Roman" size="26.0" />
                                  </font>
@@ -63,9 +65,12 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="232.0" prefWidth="643.0">
                <children>
-                  <Label fx:id="Due_date_label" layoutX="398.0" layoutY="50.0" prefHeight="29.0" prefWidth="153.0" text="Select an item first ..." textAlignment="CENTER" />
-                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#New_Item" prefHeight="25.0" prefWidth="80.0" text="New Item" AnchorPane.bottomAnchor="227.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="646.0" />
-                  <Button layoutX="14.0" layoutY="52.0" mnemonicParsing="false" onAction="#Delete_Item" prefHeight="25.0" prefWidth="80.0" text="Delete Item" AnchorPane.bottomAnchor="189.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="646.0" />
+                  <Label fx:id="Due_date_label" layoutX="394.0" layoutY="34.0" prefHeight="53.0" prefWidth="162.0" text="    Select an item first ..." textAlignment="CENTER">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Label>
+                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#New_Item" prefHeight="25.0" prefWidth="80.0" text="New Task" AnchorPane.bottomAnchor="227.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="646.0" />
+                  <Button layoutX="14.0" layoutY="52.0" mnemonicParsing="false" onAction="#Delete_Item" prefHeight="25.0" prefWidth="80.0" text="Delete Task" AnchorPane.bottomAnchor="189.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="646.0" />
                   <Button layoutX="14.0" layoutY="91.0" mnemonicParsing="false" onAction="#Save_List" prefHeight="25.0" prefWidth="80.0" text="Save List" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="646.0" />
                   <RadioButton fx:id="rdButtonCompleted" layoutX="584.0" layoutY="48.0" mnemonicParsing="false" onAction="#Item_Is_Completed" text="Completed/Incomplete" AnchorPane.bottomAnchor="201.0" AnchorPane.rightAnchor="12.0" />
                   <Label layoutX="192.0" layoutY="17.0" prefHeight="21.0" prefWidth="109.0" text="Description" AnchorPane.bottomAnchor="228.0" AnchorPane.rightAnchor="439.0">
@@ -77,17 +82,37 @@
                         <Font size="15.0" />
                      </font></Label>
                   <Label layoutX="566.0" layoutY="19.0" text="Status:" AnchorPane.bottomAnchor="230.0" AnchorPane.rightAnchor="138.0" />
-                  <CheckBox fx:id="checkBoxCompleted_Items" layoutX="209.0" layoutY="235.0" mnemonicParsing="false" onAction="#Show_Completed_Items" text="Show Completed Items" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="387.0" />
-                  <CheckBox fx:id="checkBoxIncomplete_Items" layoutX="385.0" layoutY="235.0" mnemonicParsing="false" onAction="#Show_Incomplete_Items" text="Show Incomplete Items" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="210.0" />
+                  <CheckBox fx:id="checkBoxCompleted_Items" layoutX="22.0" layoutY="235.0" mnemonicParsing="false" onAction="#Show_Completed_Items" text="Show Completed Items" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="574.0" />
+                  <CheckBox fx:id="checkBoxIncomplete_Items" layoutX="192.0" layoutY="235.0" mnemonicParsing="false" onAction="#Show_Incomplete_Items" text="Show Incomplete Items" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="403.0" />
                   <Button layoutX="14.0" layoutY="129.0" mnemonicParsing="false" onAction="#Delete_List" prefHeight="25.0" prefWidth="80.0" text="Delete List" AnchorPane.bottomAnchor="112.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="646.0" />
                   <Button layoutX="14.0" layoutY="170.0" mnemonicParsing="false" onAction="#Edit_Name_List" prefHeight="25.0" prefWidth="80.0" text="Edit Name" AnchorPane.bottomAnchor="71.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="646.0" />
-                  <Button layoutX="345.0" layoutY="195.0" mnemonicParsing="false" onAction="#Modify_Item" text="Modify Item" AnchorPane.bottomAnchor="46.0" AnchorPane.rightAnchor="314.0" />
-                  <Label fx:id="Description_label" layoutX="143.0" layoutY="39.0" prefHeight="53.0" prefWidth="207.0" text="Select an item first ..." textAlignment="CENTER" />
-                  <Label fx:id="Status_Item" layoutX="608.0" layoutY="18.0" prefHeight="17.0" prefWidth="126.0" text="N/A">
+                  <Button layoutX="470.0" layoutY="183.0" mnemonicParsing="false" onAction="#Modify_Item" text="Modify Task" AnchorPane.bottomAnchor="58.0" AnchorPane.rightAnchor="189.0" />
+                  <Label fx:id="Description_label" layoutX="143.0" layoutY="34.0" prefHeight="53.0" prefWidth="207.0" text="         Select an item first ..." textAlignment="RIGHT">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Label>
+                  <Label fx:id="Status_Item" layoutX="603.0" layoutY="14.0" prefHeight="17.0" prefWidth="126.0" text="N/A">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
+                  <TextField fx:id="description_changed" layoutX="562.0" layoutY="205.0" prefHeight="53.0" prefWidth="174.0" promptText="Insert a description ..." />
+                  <Label layoutX="610.0" layoutY="185.0" text="New Description">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="616.0" layoutY="131.0" text="New Due_Date">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <DatePicker fx:id="Date_picker_changed" layoutX="561.0" layoutY="152.0" promptText="Select a date ..." />
+                  <Button layoutX="355.0" layoutY="227.0" mnemonicParsing="false" onAction="#Delete_All_Items" prefHeight="21.0" prefWidth="126.0" text="Delete All Tasks" textAlignment="CENTER" textFill="RED">
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
         </items>
